# printingGraphs

./: .gitignore  README.md
build-printingGraphs-Desktop_Qt_5_15_2_MinGW_64_bit-Debug/printingGraphs/: AppConfigurator.h  AppSetup.h  CMakeLists.txt  DependencyContainer.h  IOCContainer.h  datacontainer.cpp  datacontainer.h  graphfactory.cpp  graphfactory.h  idatareader.cpp  idatareader.h  igraphs.cpp  igraphs.h  jsonreader.cpp  jsonreader.h  linegraph.cpp  linegraph.h  main.cpp  mainwindow.cpp  mainwindow.h  readerfactory.cpp  readerfactory.h  scattergraph.cpp  scattergraph.h  sqlreader.cpp  sqlreader.h
